@@ -1,4 +1,8 @@
 2015-11-25  Jean-Louis Martineau <martineau@zmanda.com>
+	* perl/Amanda/Amservice.pm: New perl module to execute amservive.
+	* perl/Makefile.am: Add Amanda/Amservice.pm
+
+2015-11-25  Jean-Louis Martineau <martineau@zmanda.com>
 	* common-src/amservice.c: Add --stream and --config option, use
 	  security_stream_write_async
 
